backend/startup_test.txt
file:///C:/Users/Acer/Desktop/FinbotGlobal/backend/src/controllers/chatController.js:23
  analyzeSentiment
  ^^^^^^^^^^^^^^^^
SyntaxError: The requested module '../services/tiingo/newsService.js' does not provide an export named 'analyzeSentiment'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:228:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:335:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:647:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.18.0
